tests/NormalTests/paczka1/fuzzy1/73584809.err
Error in line 5: NvdjBB A904 30,8
Error in line 11: lb16rKtt A904 62,1
Error in line 14: lb16rKtt S334 83,1
Error in line 21: lb16rKtt S188 48,87
Error in line 17: lb16rKtt A904 1,9
Error in line 25: vzGabefN A904 39,3
Error in line 24: hV5rquwe S334 31,5
Error in line 32: vzGabefN S754 0,0
Error in line 31: A904 S188 36,3
Error in line 33: hV5rquwe S188 45,8
